libs/extractor/tests/snapshots/all_tests__global_css_at_rules.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {globalCss} from '@devup-ui/core'\nglobalCss({\n    body: {\n        \"@media\": {\n            \"(min-width: 768px)\": { bg: \"white\" }\n        }\n    }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "white",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(min-width: 768px)",
                        selector: Some(
                            "body",
                        ),
                    },
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n;\n",
}
